--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
+This is a web app built wth Ruby on Rails, in accordance to the DevTips Rails
+series.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Rails version 4.2.6
+Ruby version 2.2.3
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
